--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               Balochistan Revenue Authority near Nadra office airport road Quetta </div>
             <div class="top_bar_contact_item ml-auto">
               <div class="top_bar_icon"><i class="fa fa-envelope-o"></i></div>
-              <a href="mailto:yourdomain@gmail.com">bra@gmail.com</a> </div>
+              <a href="mailto:yourdomain@gmail.com">bra@outlook.com</a> </div>
             <div class="top_bar_social">
               <ul class="social-icons">
                 <!-- <li class="linkedin-icon"><a href="javascript:void(0)"><i class="ti ti-linkedin"></i></a> </li> -->
